# productagent-evalbench

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data - 副本/product_docs/: faq.md  refund_policy.md
docs/: agent_research_brief.md  architecture.md  cost_control_guide.md  evaluation_methodology.md  final_project_summary.md  interview_walkthrough.md  jd_alignment.md  provider_setup.md  real_model_eval_guide.md  runbook.md  tool_coverage.md
outputs/: agent_trace.jsonl  baseline_mock_results.jsonl  experiment_baseline_mock.jsonl  experiment_rag_top_k_1.jsonl  experiment_rag_top_k_3.jsonl  experiment_tool_with_mcp_catalog.jsonl  experiment_tool_with_memory_session.jsonl  experiment_tool_with_skills.jsonl  experiment_tool_without_memory.jsonl  model_benchmark_external.jsonl  model_benchmark_mock.jsonl  rag_mock_results.jsonl  tool_mock_results.jsonl
productagent/: __init__.py  benchmark_manifest.py  cli.py  data_loader.py  output_writer.py  result_schema.py  run_metadata.py  tool_coverage.py
reports/: ablation_report.md  benchmark_manifest.json  context_engineering_report.md  eval_summary.md  evaluator_agent_report.md  experiment_matrix.json  failure_analysis.md  model_benchmark_report.md  model_cost_report.md  model_performance_comparison.md  optimization_report.md  provider_eval_isolation.md  rag_comparison.md  regression_check.md  tool_trace_report.md
scripts/: smoke_test.py
tests/: test_baseline_agent.py  test_mock_provider.py  test_phase5_benchmark.py  test_phase6_system.py  test_providers.py  test_rag.py  test_tools_eval.py
(+55 files in other folders)
