[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "productagent-evalbench"
version = "0.1.0"
description = "Offline MVP for product-agent context engineering and evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["productagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]